[package]
name = "shunlib"
version = "0.1.0"
authors = ["chszchen <chszchen@cn.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
all = ["lang", "dynamic_sql"]
lang = ["convert_case"]
dynamic_sql = ["lazy_static", "handlebars", "rusqlite", "serde"]

[dependencies]
thiserror = "1.0.24"
log = "0.4.14"
log4rs = "1.0.0"

convert_case = { version = "0.4.0", optional = true }

chrono = { version = "0.4.19", optional = true }

lazy_static = { version = "1.4.0", optional = true }
handlebars = { version = "3.5.4", optional = true }
rusqlite = { version = "0.25.0", optional = true }

serde = { version = "1.0.117", features = ["derive"], optional = true }
serde_json = { version = "1.0.64", optional = true }

[target.x86_64-pc-windows-gnu.dependencies]
rusqlite = { version = "0.25.0", features = ["bundled"] }

[dev-dependencies]
env_logger = "0.8.3"
